--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,6 @@
 h1 {
     text-align: center;
+    margin-bottom: 50px;
 }
 
 /* Created a box for mood input */
@@ -7,16 +8,116 @@ h1 {
     width: 500px;
     margin: 0 auto;
     height: 300px;
-    background-color: black;
+    background-color: rgb(216, 202, 202);
     border: 2px solid #333;
     border-radius: 10px;
     padding: 20px;
     text-align: center;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 30px;
 }
 
 .mood-options{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+    margin-bottom: 30px;
+}
+
+.positive{
+    grid-column: 1/2;
+}
+
+.neutral{
+    grid-column: 2/3;
+
+}
+
+.negative{
+    grid-column: 3/4;
+}
+
+.mood-options p {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  input[type="radio"] {
+    /* margin-right: 10px; */
+    margin: 0;
+    width: 20px;
+  }
+
+.mood-options h4{
+    text-align: center;
+}
+
+
+.mood-options label{
+    font-size: 1em;
+    margin-left: 8px;
+    text-align: left;
+}
+
+.user-mood{
+  border: 2px solid #ccc;
+  border-radius: 1em;
+  text-align: center;
+  width: 400px;
+  border-radius: 5px;
+  margin: 60px auto;
+}
+
+.mood-box {
+  padding: 10px 0;
+  margin: 0;
+  margin-top: 16px;
+}
+
+
+.mood-box label{
+  font-size: 1.1em;
+  padding-right: 5px;
+}
+
+#mood {
+    border: solid 1px;
+    border-radius: 3px;
+    height: 25px;
+    width: 200px;
+}
+
+.contact_button {
+  margin-left: 0.5em;
+  font-size: 1.2em;
+  border-radius: 10px;
+}
+
+.contact {
+  padding: 8px 15px;
+  background-color: rgb(160, 160, 193);
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+
+  .arrow-box{
+    width: 80px;
+    background-color: #6eb89a;
+    border-radius: 5px;
+    float: right;
+    margin-right: 80px;
+    margin-bottom: 50px;
+}
+
+
+
+.arrow {
+    text-decoration: none;
+    font-size: 40px;
+    text-align: center;
+    color: white;
+    padding-left: 20px;
 }
